--- a/BlazorTool.Client/Pages/DevicesPage.razor
+++ b/BlazorTool.Client/Pages/DevicesPage.razor
@@ -75,7 +75,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-            _devices = await ApiService.GetAllDevicesCachedAsync();        
+            _devices = await ApiService.GetAllDevicesAsync();        
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
